--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -17,7 +17,7 @@
 }
 
 .main-container {
-    height: 70vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,14 +25,30 @@
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.5rem;
 }
+
+@keyframes fadeIn {
+    0% {
+        transform:translateY(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
+
 .main-text {
     color: rgb(219, 219, 219);
+    animation: fadeIn 1.5s;
 }
-.name {
+.main-text2 {
     color: white;
+    animation: fadeIn 1.5s 1.5s both
 }
 
 .nav-container{
+    position: fixed;
     height: 10vh;
     width: 100vw;
     display: flex;
@@ -42,10 +58,11 @@
     width: 55vw;
 }
 .logo {
-    width: 45px;
-    height: 45px;
-    margin: 15px;
-    background-image: url(assets/noun-japan-3661384.svg);
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border: solid black 2px;
+    background-image: url(assets/noun-japan-5090284.svg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -58,4 +75,7 @@
     font-size: 1.3rem;
     margin: 20px;
     color: rgb(255, 255, 255);
+}
+.about-section {
+    height: 100vh;
 }
