--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -23,12 +23,11 @@
     align-items: center;
     flex-direction: column;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 1.5rem;
 }
 
 @keyframes fadeIn {
     0% {
-        transform:translateY(100%);
+        transform: translateY(100%);
         opacity: 0;
     }
     100% {
@@ -39,20 +38,35 @@
 
 
 .main-text {
+    font-size: 4rem;
     color: rgb(219, 219, 219);
     animation: fadeIn 1.5s;
+    letter-spacing: -3px;
 }
 .main-text2 {
+    margin-top: 20px;
+    letter-spacing: -1px;
+    font-size: 1.8rem;
     color: white;
-    animation: fadeIn 1.5s 1.5s both
-}
+    animation: fadeIn 1.5s 1s both
 
+}
+@media only screen and (max-width: 850px) {
+    .main-text {
+        font-size: 2.5rem;
+    }
+    .main-text2 {
+        font-size: 1.4rem;
+    }
+}
 .nav-container{
     position: fixed;
-    height: 10vh;
+    height: 9vh;
     width: 100vw;
     display: flex;
     justify-content: center;
+    background: rgb(94, 93, 93);
+    opacity: 80%;
 }
 .logo-container {
     width: 55vw;
@@ -78,4 +92,8 @@
 }
 .about-section {
     height: 100vh;
+    background: #121212;
 }
+// .projects-section {
+     // background-image: url(assets/redd-f-53JzXALAHoM-unsplash.jpg);
+// }
