--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -51,34 +51,15 @@
     animation: fadeIn 1.5s 1s both
 
 }
-@media only screen and (max-width: 850px) {
-    .main-text {
-        font-size: 2.5rem;
-    }
-    .main-text2 {
-        font-size: 1.4rem;
-    }
-}
+
 .nav-container{
     position: fixed;
-    height: 9vh;
+    height: 7vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     background: rgb(94, 93, 93);
     opacity: 80%;
-}
-.logo-container {
-    width: 55vw;
-}
-.logo {
-    width: 50px;
-    height: 50px;
-    margin: 10px;
-    border: solid black 2px;
-    background-image: url(assets/noun-japan-5090284.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 .nav-bar {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -89,11 +70,43 @@
     font-size: 1.3rem;
     margin: 20px;
     color: rgb(255, 255, 255);
+    transform: translateY(-4px);
 }
+.logo-container {
+    width: 55vw;
+}
+.logo {
+    width: 45px;
+    height: 45px;
+    margin-top: 4.5px;
+    border: solid black 2px;
+    background-image: url(assets/noun-japan-5090284.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .about-section {
     height: 100vh;
     background: #121212;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: .8rem;
 }
 // .projects-section {
      // background-image: url(assets/redd-f-53JzXALAHoM-unsplash.jpg);
 // }
+
+@media only screen and (max-width: 850px) {
+    .main-text {
+        font-size: 2.5rem;
+    }
+    .main-text2 {
+        font-size: 1.4rem;
+    }
+    .nav-bar {
+        font-size: 1.1rem;
+        transform: translateY(0px);
+    }
+}
