--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -86,13 +86,49 @@
 }
 
 .about-section {
+    display: grid;
+    grid-template-columns: 30vw 30vw 30vw;
+    grid-template-rows: 50vh 1px;
     height: 100vh;
     background: #121212;
     color: white;
-    display: flex;
     justify-content: center;
     align-items: center;
     font-size: .8rem;
+    column-gap: 50px;
+}
+.item-1 {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    font-size: 2rem;
+    text-align: center;
+}
+.item-2 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    font-size: 1.2rem;
+}
+.item-3 {
+    text-align: center;
+    font-size: 2rem;
+    grid-row: 1/2;
+    grid-column: 2/3;
+}
+.item-4 {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    font-size: 1.2rem;
+}
+.item-5 {
+    text-align: center;
+    font-size: 2rem;
+    grid-row: 1/2;
+    grid-column: 3/4;
+}
+.item-6 {
+    grid-row: 2/3;
+    grid-column: 3/4;
+    font-size: 1.2rem;
 }
 // .projects-section {
      // background-image: url(assets/redd-f-53JzXALAHoM-unsplash.jpg);
