--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .bg-image {
@@ -19,10 +20,11 @@
 .main-container {
     height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
+    justify-content: center;
+    flex-direction: row;
     font-family: 'Courier New', Courier, monospace;
+    text-align: center;
 }
 
 @keyframes fadeIn {
@@ -36,30 +38,64 @@
     }
 }
 
-
+.item-container {
+    display: flex;
+    flex-direction: column;
+    width: 60vw;
+    height: 80vh;
+    margin-top: 20vh;
+}
+.item-container2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    width: 40vw;
+}
 .main-text {
     font-size: 4rem;
     color: rgb(219, 219, 219);
     animation: fadeIn 1.5s;
     letter-spacing: -3px;
+    width: 40vw;
 }
 .main-text2 {
-    margin-top: 20px;
+    margin-top: 70px;
     letter-spacing: -1px;
     font-size: 1.8rem;
     color: white;
-    animation: fadeIn 1.5s 1s both
-
+    animation: fadeIn 1.5s 1s both;
+    width: 40vw;
+    grid-column: 2/3;
+    grid-row: 2/3;
 }
 
+.current-project {
+    text-align: center;
+    height: 60vh;
+    width: 22vw;
+    background: url(assets/nadezhda-nikolaenko-UONij8U_oVc-unsplash.jpg);
+    grid-column: 1/2;
+    grid-row: 2/3;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: black solid 5px;
+    border-radius: 5px;
+}
+.current-project-header {
+    height: 5vh;
+    width: 22vw;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
 .nav-container{
     position: fixed;
     height: 7vh;
     width: 100vw;
     display: flex;
     justify-content: center;
-    background: rgb(94, 93, 93);
-    opacity: 80%;
 }
 .nav-bar {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -69,8 +105,7 @@
     list-style: none;
     font-size: 1.3rem;
     margin: 20px;
-    color: rgb(255, 255, 255);
-    transform: translateY(-4px);
+    color: rgb(196, 196, 196);
 }
 .logo-container {
     width: 55vw;
@@ -79,7 +114,6 @@
     width: 45px;
     height: 45px;
     margin-top: 4.5px;
-    border: solid black 2px;
     background-image: url(assets/noun-japan-5090284.svg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -143,6 +177,7 @@
     filter: brightness(60%);
 }
 
+
 @media only screen and (max-width: 850px) {
     .main-text {
         font-size: 2.5rem;
@@ -157,4 +192,15 @@
     .about-section {
         
     }
+
+
+@media only screen and (max-width: 1000px) {
+    .current-project {
+        display: none;
+    }
+    .current-project-header {
+        display: none;
+    }
+    
+}
 }
