--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -42,10 +42,11 @@
     flex-direction: column;
     width: 60vw;
     height: 60vh;
+    margin-top: 5vh;
+    color: #c7c7c7;
 }
 .main-text {
     font-size: 4rem;
-    color: rgb(219, 219, 219);
     animation: fadeIn 1.5s;
     letter-spacing: -3px;
     width: 30vw;
@@ -54,10 +55,13 @@
     margin-top: 70px;
     letter-spacing: -1px;
     font-size: 1.8rem;
-    color: white;
-    animation: fadeIn 1.5s 1s both;
+    animation: fadeIn 1.2s 1s both;
 }
-
+.projects-button {
+    margin-top: 30px;
+    height: 25px;
+    width: 10vw;
+}
 .nav-container{
     position: fixed;
     height: 7vh;
@@ -92,7 +96,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background: #121212;
+    background: #333;
 }
 .about-section {
     display: grid;
@@ -102,12 +106,16 @@
     font-size: .8rem;
     column-gap: 50px;
     row-gap: 20px;
+    color: #c7c7c7;;
 }
 .item-1 {
+    color: white;
+    font-style: italic;
     grid-row: 1/2;
     grid-column: 1/2;
     font-size: 2rem;
-    text-align: center;
+    padding-bottom: 10px;
+    border-bottom: solid 1px white;
 }
 .item-2 {
     grid-row: 2/3;
@@ -115,10 +123,13 @@
     font-size: 1.2rem;
 }
 .item-3 {
-    text-align: center;
+    color: white;
+    font-style: italic;
     font-size: 2rem;
     grid-row: 1/2;
     grid-column: 2/3;
+    padding-bottom: 10px;
+    border-bottom: solid 1px white;
 }
 .item-4 {
     grid-row: 2/3;
@@ -126,10 +137,13 @@
     font-size: 1.2rem;
 }
 .item-5 {
-    text-align: center;
+    color: white;
+    font-style: italic;
     font-size: 2rem;
     grid-row: 1/2;
     grid-column: 3/4;
+    padding-bottom: 10px;
+    border-bottom: solid 1px white;
 }
 .item-6 {
     grid-row: 2/3;
@@ -163,7 +177,10 @@
         margin-left: 10px;
     }
     .about-section {
-        
+        display: flex;
+        flex-direction: column;
+        margin-left: 100px;
+        margin-right: 100px;
     }
     .bg-image {
         background-position: right;
