added some styles

--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -75,9 +75,9 @@
     display: flex;
     justify-content: space-around;
     list-style: none;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     margin: 20px;
-    color: #f0f0f0;
+    color: #d1d1d1;
 }
 
 .nav-bar li:hover {
@@ -178,7 +178,7 @@
         font-size: 1.4rem;
     }
     .nav-bar {
-        font-size: 1.1rem;
+        font-size: 1rem;
         gap: 3vw;
         margin-right: 10vw;
     }
