changed background brightness

--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -14,7 +14,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    filter:brightness(40%)
+    filter:brightness(60%)
 }
 
 .main-container {
@@ -81,7 +81,7 @@
 }
 
 .nav-bar li:hover {
-    border-bottom: #333 solid 1px;
+    border-bottom: #fff solid 1px;
     cursor: pointer;
 }
 .logo-container {
