--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -174,6 +174,7 @@
     font-size: 2rem;
 }
 .projects > * {
+    display: block;
     border: solid black 3px;
     border-radius: 10px;
     min-width: 25vw;
