--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -117,13 +117,13 @@
     color: #c7c7c7;;
 }
 .item-1 {
-    color: white;
+    color: #fa2626;
     font-style: italic;
     grid-row: 1/2;
     grid-column: 1/2;
     font-size: 2rem;
     padding-bottom: 10px;
-    border-bottom: solid 1px white;
+    border-bottom: solid 1px #c7c7c7;
 }
 .item-2 {
     grid-row: 2/3;
@@ -131,13 +131,13 @@
     font-size: 1.2rem;
 }
 .item-3 {
-    color: white;
+    color: #fa2626;
     font-style: italic;
     font-size: 2rem;
     grid-row: 1/2;
     grid-column: 2/3;
     padding-bottom: 10px;
-    border-bottom: solid 1px white;
+    border-bottom: solid 1px #c7c7c7;
 }
 .item-4 {
     grid-row: 2/3;
@@ -145,7 +145,7 @@
     font-size: 1.2rem;
 }
 .item-5 {
-    color: white;
+    color: #fa2626;
     font-style: italic;
     font-size: 2rem;
     grid-row: 1/2;
@@ -161,31 +161,30 @@
 .project-section{
     z-index: -1;
     height: 100vh;
-    background-image: url(assets/nice_snow.webp);
-    filter: brightness(95%);
+    background: #111;
 }
 
 .project-text {
     position: relative;
-    top: 15vh;
+    top: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
+    font-size: 2.5rem;
+    color: #fa2626;
 }
 
 .projects > * {
-    border: solid black 3px;
-    border-radius: 10px;
-    min-width: 25vw;
-    max-height: 25vh;
+    border: solid #fa2626 3px;
+    min-width: 30vw;
+    max-height: 30vh;
 }
 
 .projects {
     display: grid;
     margin-top: 20vh;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
     grid-template-areas: " a a b b c c "
                          " . d d e e . ";
 }
@@ -208,6 +207,21 @@
 .image-5 {
     content:url(../src/assets/memory.png);
     grid-area: e
+}
+
+@media only screen and (max-width: 1600px)  {
+    .projects {
+        grid-template-areas: " . a a b b . "
+                             " . d d e e . "
+                             " . . c c . . ";
+    }
+    .project-section {
+        height: 130vh;
+    }
+    .projects > * {
+        height: 25vh;
+        width: 42vw;
+    }
 }
 
 @media only screen and (max-width: 850px) {
@@ -234,6 +248,20 @@
     .bg-image {
         background-position: right;
     }
+    .project-section {
+        height: 180vh;
+    }
+    .projects {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .projects > * {
+        width: 70vw;
+    }
 }
 
 
+@media only screen and (max-width: 1600px)  { 
+
+}
