--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -26,19 +26,6 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-.fade-in-section {
-    opacity: 0;
-    transform: translateY(20vh);
-    visibility: hidden;
-    transition: opacity 0.6s ease-out, transform 1.2s ease-out;
-    will-change: opacity, visibility;
-}
-.fade-in-section.is-visible {
-    opacity: 1;
-    transform: none;
-    visibility: visible;
-}
-
 
 @keyframes fadeIn {
     0% {
@@ -83,6 +70,10 @@
     margin-left: 15px;
     text-shadow: 2px 2px 2px #c4f3ff;
 }
+.name {
+    margin-left: 10px;
+    color: #00ccff;
+}
 .nav-container{
     z-index: 3;
     position: fixed;
@@ -101,6 +92,7 @@
     font-size: 1.1rem;
     margin: 20px;
     color: #fff;
+    font-weight: bolder;
 }
 
 .nav-bar li:hover {
@@ -112,12 +104,15 @@
     margin-right: 20px;
 }
 .logo {
-    width: 45px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    width: 10vw;
     height: 45px;
     margin-top: 4.5px;
-    background-image: url(assets/noun-japan-5090284.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    font-size: 1.8rem;
+    color: white;
+    font-weight: bolder;
 }
 .logo:hover {
     cursor: pointer;
@@ -236,6 +231,11 @@
     content:url(../src/assets/memory.png);
     grid-area: e
 }
+.technologies {
+    height: 60vh;
+    background: #111;
+    
+}
 
 @media only screen and (max-width: 1600px)  {
     .projects {
@@ -252,6 +252,9 @@
     }
 }
 @media only screen and (max-width: 1300px) { 
+    .project-section {
+        height: 100vh;
+    }
     .projects > * {
         max-height: 18vh;
         max-width: 30vw;
@@ -282,7 +285,7 @@
     }
     .bg-image {
         background-position: right;
-    }npm run dev
+    }
     .project-section {
         height: 195vh;
     }
@@ -294,7 +297,7 @@
     }
     .projects > * {
         min-height: 25vh;
-        min-width: 40vw;
+        min-width: 50vw;
     }
 }
 
