--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -70,10 +70,7 @@
     margin-left: 15px;
     text-shadow: 2px 2px 2px #c4f3ff;
 }
-.name {
-    margin-left: 10px;
-    color: #00ccff;
-}
+
 .nav-container{
     z-index: 3;
     position: fixed;
@@ -107,12 +104,13 @@
     display: flex;
     align-items: center;
     border-radius: 5px;
-    width: 10vw;
+    width: 15vw;
     height: 45px;
     margin-top: 4.5px;
     font-size: 1.8rem;
     color: white;
     font-weight: bolder;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .logo:hover {
     cursor: pointer;
