--- a/Portfolio Website/src/App.scss
+++ b/Portfolio Website/src/App.scss
@@ -200,7 +200,7 @@
     width: 40vw;
     height: 40vh;
     border-radius: 15px;
-    filter: brightness(95%);
+    filter: brightness(90%);
 }
 
 .project-info {
@@ -208,6 +208,7 @@
     color: #fff;
     margin-top: 20px;
     font-size: 1.3rem;
+    text-align: center;
 }
 .projects {
     z-index: 2;
@@ -218,7 +219,15 @@
     gap: 30px;
     height: 90vh;
     align-items: center;
-
+}
+a:link {
+    color: white;
+}
+a:visited {
+    color: white;
+}
+a:hover {
+    color: #00ccff;
 }
 .image-1{
     filter:brightness(90%);
